--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             </div>
             <div class="gallery">
                 <!-- Aquí se pueden agregar imágenes del portafolio -->
-                <img src="/images/image1.JPG" alt="Descripción de la imagen 1">
-                <img src="/images/image2.JPG" alt="Descripción de la imagen 2">
-                <img src="/images/image4.JPG" alt="Descripción de la imagen 3">
+                <img src="image1.JPG" alt="Descripción de la imagen 1">
+                <img src="image2.JPG" alt="Descripción de la imagen 2">
+                <img src="image4.JPG" alt="Descripción de la imagen 3">
             </div>
         </section>
 
