--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Lozada's Studio</h1>
         <nav> 
-            <p><a href="#about">Sobre mí</a></p>
+            <p><a href="#about">Yo</a></p>
             <p><a href="#paraTi">Precios</a></p>
             <p><a href="#portfolio">Portafolio</a></p>       
         </nav>
@@ -24,7 +24,7 @@
             <h2>Sobre mí</h2>
             <div class="container">
                 <p>Hola, soy Iñaki Lozada, estudio en Tec campus Querétaro y me gusta la fotografía deportiva.</p>
-            </div>   
+            </div>  
         </section>
 
         <section id="paraTi">
@@ -42,9 +42,9 @@
             </div>
             <div class="gallery">
                 <!-- Aquí se pueden agregar imágenes del portafolio -->
-                <img src="image1.JPG" alt="Descripción de la imagen 1">
-                <img src="image2.JPG" alt="Descripción de la imagen 2">
-                <img src="image4.JPG" alt="Descripción de la imagen 3">
+                <img src="/images/image1.JPG" alt="Descripción de la imagen 1">
+                <img src="/images/image2.JPG" alt="Descripción de la imagen 2">
+                <img src="/images/image4.JPG" alt="Descripción de la imagen 3">
             </div>
         </section>
 
